--- a/index.html
+++ b/index.html
@@ -27,6 +27,81 @@
     </section>
 
 
+    <section class="product-area">
+        <div class="container">
+            <div class="row" id="shop">
+                <div class="col-3">
+                    <div class="item">
+                        <img src="./images/img-1.jpg" alt="">
+                        <div class="details">
+                            <h4 class="mt-2">Title</h4>
+                            <p class="mt-2">Lorem ipsum dolor, sit amet consectetur</p>
+                            <div class="price-quantity mt-3">
+                                <h5 class="">BDT 100</h5>
+                                <div class="buttons">
+                                    <i class="bi bi-dash-circle"></i>
+                                    <div class="quantity">1</div>
+                                    <i class="bi bi-plus-circle"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="item">
+                        <img src="./images/img-1.jpg" alt="">
+                        <div class="details">
+                            <h4 class="mt-2">Title</h4>
+                            <p class="mt-2">Lorem ipsum dolor, sit amet consectetur</p>
+                            <div class="price-quantity mt-3">
+                                <h5 class="">BDT 100</h5>
+                                <div class="buttons">
+                                    <i class="bi bi-dash-circle"></i>
+                                    <div class="quantity">1</div>
+                                    <i class="bi bi-plus-circle"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="item">
+                        <img src="./images/img-1.jpg" alt="">
+                        <div class="details">
+                            <h4 class="mt-2">Title</h4>
+                            <p class="mt-2">Lorem ipsum dolor, sit amet consectetur</p>
+                            <div class="price-quantity mt-3">
+                                <h5 class="">BDT 100</h5>
+                                <div class="buttons">
+                                    <i class="bi bi-dash-circle"></i>
+                                    <div class="quantity">1</div>
+                                    <i class="bi bi-plus-circle"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="item">
+                        <img src="./images/img-1.jpg" alt="">
+                        <div class="details">
+                            <h4 class="mt-2">Title</h4>
+                            <p class="mt-2">Lorem ipsum dolor, sit amet consectetur</p>
+                            <div class="price-quantity mt-3">
+                                <h5 class="">BDT 100</h5>
+                                <div class="buttons">
+                                    <i class="bi bi-dash-circle"></i>
+                                    <div class="quantity">1</div>
+                                    <i class="bi bi-plus-circle"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
 
 
