--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./dist/style.css">
 </head>
 <body>
     
@@ -30,74 +30,7 @@
     <section class="product-area">
         <div class="container">
             <div class="row" id="shop">
-                <div class="col-3">
-                    <div class="item">
-                        <img src="./images/img-1.jpg" alt="">
-                        <div class="details">
-                            <h4 class="mt-2">Title</h4>
-                            <p class="mt-2">Lorem ipsum dolor, sit amet consectetur</p>
-                            <div class="price-quantity mt-3">
-                                <h5 class="">BDT 100</h5>
-                                <div class="buttons">
-                                    <i class="bi bi-dash-circle"></i>
-                                    <div class="quantity">1</div>
-                                    <i class="bi bi-plus-circle"></i>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-3">
-                    <div class="item">
-                        <img src="./images/img-1.jpg" alt="">
-                        <div class="details">
-                            <h4 class="mt-2">Title</h4>
-                            <p class="mt-2">Lorem ipsum dolor, sit amet consectetur</p>
-                            <div class="price-quantity mt-3">
-                                <h5 class="">BDT 100</h5>
-                                <div class="buttons">
-                                    <i class="bi bi-dash-circle"></i>
-                                    <div class="quantity">1</div>
-                                    <i class="bi bi-plus-circle"></i>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-3">
-                    <div class="item">
-                        <img src="./images/img-1.jpg" alt="">
-                        <div class="details">
-                            <h4 class="mt-2">Title</h4>
-                            <p class="mt-2">Lorem ipsum dolor, sit amet consectetur</p>
-                            <div class="price-quantity mt-3">
-                                <h5 class="">BDT 100</h5>
-                                <div class="buttons">
-                                    <i class="bi bi-dash-circle"></i>
-                                    <div class="quantity">1</div>
-                                    <i class="bi bi-plus-circle"></i>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-3">
-                    <div class="item">
-                        <img src="./images/img-1.jpg" alt="">
-                        <div class="details">
-                            <h4 class="mt-2">Title</h4>
-                            <p class="mt-2">Lorem ipsum dolor, sit amet consectetur</p>
-                            <div class="price-quantity mt-3">
-                                <h5 class="">BDT 100</h5>
-                                <div class="buttons">
-                                    <i class="bi bi-dash-circle"></i>
-                                    <div class="quantity">1</div>
-                                    <i class="bi bi-plus-circle"></i>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                <!-- Data will load from javascript -->
             </div>
         </div>
     </section>
@@ -108,6 +41,6 @@
 
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-    <script src="./main.js"></script>
+    <script src="./dist/main.js"></script>
 </body>
 </html>
