--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
               <div class="d-flex">
                   <div class="cart">
                       <i class="bi bi-bag-check-fill"></i>
-                      <div class="cartAmount">30</div>
+                      <div id="cartAmount" class="cartAmount">0</div>
                   </div>
               </div>
             </div>
