--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 <body>
     
     <section class="header">
-        <nav class="navbar bg-light">
+        <nav class="navbar bg-dark">
             <div class="container">
-              <a class="navbar-brand">Store</a>
+              <a class="navbar-brand text-light">Store</a>
               <div class="d-flex">
                   <div class="cart">
                       <i class="bi bi-bag-check-fill"></i>
